<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nameMain"
    tools:context=".presentation.NavActivity">

    <include
        android:id="@+id/include"
        layout="@layout/base_layout" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nameBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorYellow"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <EditText
        android:id="@+id/gameName"
        android:layout_width="253dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#F2EF10"
        android:ems="10"
        android:fontFamily="@font/pixellari"
        android:gravity="center"
        android:hint="Enter Your Name!"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="193dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/pixellari"
        android:text="PLAY"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.8" />


</android.support.constraint.ConstraintLayout>
